--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 #spring.security.user.name=admin
 #spring.security.user.password=123
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
